# butterfingers

./: .env  .gitignore  Cargo.toml  README.md  butterfingers build script.txt  pyfi_db.sql  setup_dependencies.sh
archive/Butterfingers unused codes/: Ideas.txt  Lib.rs Commit Text.txt  Main function.txt  Notes.txt  Reference Number for SY 2023-2024 e-Student Satisfaction Survey.txt  algorithm handling.txt  final main rs old code before gui.txt  identify lib rs removed code.txt  initial unused algorithm.txt  lib rs algorithms.txt  lib rs new code.txt  lib rs.txt  main new code.txt  main.rs old code.txt  main.rs prior to pre finalization.txt  pre finalization main.rs code.txt  removed lib rs code.txt
archive/Butterfingers unused codes/enroll/: enroll toml.txt
archive/Butterfingers unused codes/verify/: butterfingersd-verify.txt
archive/butterfingers-commented/: butterfingersd-verify.rs  object relational mapping.txt
archive/butterfingers-explained/: butterfingersd-verify.rs
butterfingers-tauri-enroll/src/: main.js
butterfingers-tauri-enroll/src-tauri/: Cargo.toml  tauri.conf.json
butterfingers-tauri-enroll/src-tauri/src/: main.rs
butterfingersd-enroll/: Cargo.toml
butterfingersd-enroll/src/: main.rs
butterfingersd-verify/: Cargo.toml
butterfingersd-verify/src/: main.rs
src/: README.md  attendance.html  attendance.js  enrollProcess.html  finger-management.html  index.html  index1.html  lib.rs  main.js  main.rs  scanner.js  selectEmpToEnroll.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/scripts/: attendance.js  empToEnroll.js  enrollProcess.js  management.js
src/styles/: enrollConfirmFingerprintStyles.css  managementStyles.css  navigationStyles.css  scannedStyles.css  sharedStyles.css
