[workspace]
members = [
    "butterfingersd-enroll",
    "butterfingersd-verify",
]
edition = "2021"
resolver = "2"

[workspace.dependencies]
libfprint-rs = "0.2.1"

[package]
name = "butterfingers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] } # "attributes" to allow main function to be ran in async
dotenvy = "0.15.7"
anyhow = "1.0.79"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "mysql", "macros", "time", "uuid"] }

#[[bin]]
#name = "enroll"
#path = "butterfingersd-enroll/src/main.rs"

#[[bin]]
#name = "verify"
#path = "butterfingersd-verify/src/main.rs"

