[workspace]
members = [
    "butterfingersd-enroll",
    "butterfingersd-verify",
]
edition = "2021"
resolver = "2"

[dependencies]
libfprint-rs = "0.2.1"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "mysql", "macros", "time", "uuid"] }
dotenvy = "0.15.7"
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4","fast-rng","macro-diagnostics"] }
dirs = "5.0.1"
users = "0.11.0"
prettytable = "0.10.0" #from butterfingersd-enroll
glib = "0.19.0" #from butterfingersd-verify
serde_json = "1.0.115"
tokio-stomp-2 = "0.3.0"
futures = "0.3.30"
tokio-tungstenite = "0.21.0"

[workspace.dependencies]
libfprint-rs = "0.2.1"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "mysql", "macros", "time", "uuid"] }
dotenvy = "0.15.7"
anyhow = "1.0.79"
#async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.7.0"
dirs = "5.0.1"
users = "0.11.0"

[package]
name = "butterfingers"
version = "0.1.0"
edition = "2021"

# [dependencies]
# async-std = { version = "1.12.0", features = ["attributes"] } # "attributes" to allow main function to be ran in async
# dotenvy = "0.15.7"
# anyhow = "1.0.79"
# sqlx = { version = "0.7.2", features = ["runtime-async-std", "mysql", "macros", "time", "uuid"] }
# tokio = { version = "1.36.0", features = ["full"] }

#[[bin]]
#name = "enroll"
#path = "butterfingersd-enroll/src/main.rs"

#[[bin]]
#name = "verify"
#path = "butterfingersd-verify/src/main.rs"

