[package]
name = "butterfingersd-enroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.19.0"
libfprint-rs.workspace = true
# butterfingersd-verify = "0.1.0" (uncomment in case the enroll depends on verify)

[[bin]]
name = "butterfingersd-enroll"
path = "src/main.rs"
