[package]
name = "butterfingersd-enroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.19.0"
libfprint-rs.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
#async-std.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4","fast-rng","macro-diagnostics"] }
# Lets you generate random UUIDs - v4
# Use a faster (but still sufficiently random) RNG - fast-rng
# Enable better diagnostics for compile-time UUIDs - macro-diagnostics
prettytable = "0.10.0"

# butterfingersd-verify = "0.1.0" (uncomment in case the enroll depends on verify)

[[bin]]
name = "enroll"
path = "src/main.rs"
