[package]
name = "butterfingersd-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfprint-rs.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4","fast-rng","macro-diagnostics"] }
# Lets you generate random UUIDs - v4
# Use a faster (but still sufficiently random) RNG - fast-rng
# Enable better diagnostics for compile-time UUIDs - macro-diagnostics
prettytable = "0.10.0"
dirs.workspace = true
users.workspace = true

# glib = "0.19.0"
# serde = "*.0.0"
# butterfingersd-enroll = "0.1.0" (uncomment in case the verify depends on enroll)

[[bin]]
name = "butterfingersd-verify"
path = "src/main.rs"